force-app/main/default/objects/Supplier_Quotation__c/Supplier_Quotation__c.object-meta.xml
<CustomObject>
    <label>Supplier Quotation</label>
    <nameField>
        <displayFormat>SQ-{000000}</displayFormat>
        <label>Supplier Quotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>