force-app/main/default/objects/Supplier_Quotation__c/fields/Delivery_Terms_Offered__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms_Offered__c</fullName>
    <label>Delivery Terms Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXW - Ex Works</fullName>
            </value>
            <value>
                <fullName>FCA - Free Carrier</fullName>
            </value>
            <value>
                <fullName>FAS - Free Alongside Ship</fullName>
            </value>
            <value>
                <fullName>FOB - Free On Board</fullName>
            </value>
            <value>
                <fullName>CFR - Cost and Freight</fullName>
            </value>
            <value>
                <fullName>CIF - Cost, Insurance and Freight</fullName>
            </value>
            <value>
                <fullName>CPT - Carriage Paid To</fullName>
            </value>
            <value>
                <fullName>CIP - Carriage and Insurance Paid To</fullName>
            </value>
            <value>
                <fullName>DAP - Delivered at Place</fullName>
            </value>
            <value>
                <fullName>DPU - Delivered at Place Unloaded</fullName>
            </value>
            <value>
                <fullName>DDP - Delivered Duty Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>