force-app/main/default/objects/Supplier_Quotation__c/fields/Offer_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Validity_Date__c</fullName>
    <label>Offer Validity Date</label>
    <type>Date</type>
</CustomField>