force-app/main/default/objects/Supplier_Quotation__c/fields/Payment_Terms_Offered__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Offered__c</fullName>
    <label>Payment Terms Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>100% Advance</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Cash Against Delivery (CAD)</fullName>
            </value>
            <value>
                <fullName>Against Invoice</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Letter of Credit (LC)</fullName>
            </value>
            <value>
                <fullName>Milestone Based</fullName>
            </value>
            <value>
                <fullName>Partial Advance + Balance on Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>