force-app/main/default/objects/Supplier_Quotation__c/fields/Quotation_Status__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Status__c</fullName>
    <label>Quotation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>