force-app/main/default/objects/Supplier_Quotation__c/fields/RFQ_Supplier__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Supplier__c</fullName>
    <label>RFQ Supplier</label>
    <referenceTo>RFQ_Supplier__c</referenceTo>
    <relationshipLabel>Supplier Quotations</relationshipLabel>
    <relationshipName>Supplier_Quotations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>