force-app/main/default/objects/Supplier_Quotation__c/fields/Total_Quoted_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Quoted_Value__c</fullName>
    <label>Total Quoted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>